--- a/inspections/templates/inspections/inspection_form.html
+++ b/inspections/templates/inspections/inspection_form.html
@@ -45,7 +45,12 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="{{ form.customer.id_for_label }}" class="form-label">{% trans 'العميل' %}</label>
+                                    {% if form.fields.customer.disabled %}
+                                    <input type="text" class="form-control" value="{{ customer.name|default:'' }}" readonly>
+                                    <input type="hidden" name="customer" value="{{ customer.pk }}">
+                                    {% else %}
                                     {% render_field form.customer class="form-control select2" id="customer-select" %}
+                                    {% endif %}
                                     {% if form.customer.errors %}
                                     <div class="invalid-feedback d-block">
                                         {% for error in form.customer.errors %}
