إضافة نظام إدارة مواعيد التسليم المتقدم - إضافة نموذج DeliveryTimeSettings لإدارة مواعيد الطلبات العادية وطلبات VIP والمعاينات - تحديث حسابات مواعيد التسليم للطلبات والمعاينات تلقائياً - إضافة حقل expected_delivery_date للمعاينات - إصلاح أخطاء عرض البائعين في القوالب - إضافة admin interface لإدارة إعدادات مواعيد التسليم - إضافة command لإعداد القيم الافتراضية - تحديث جميع القوالب لعرض مواعيد التسليم المتوقعة

--- a/inspections/templates/inspections/inspection_list.html
+++ b/inspections/templates/inspections/inspection_list.html
@@ -162,6 +162,7 @@
                     <th>{% trans 'العميل' %}</th>
                     <th>{% trans 'تاريخ الطلب' %}</th>
                     <th>{% trans 'تاريخ التنفيذ' %}</th>
+                    <th>{% trans 'تاريخ التسليم المتوقع' %}</th>
                     <th>{% trans 'عدد الشبابيك' %}</th>
                     <th>{% trans 'فني المعاينة' %}</th>
                     <th>{% trans 'البائع' %}</th>
@@ -185,6 +186,7 @@
                     <td>{{ inspection.customer|default:"عميل جديد" }}</td>
                     <td>{{ inspection.request_date }}</td>
                     <td>{{ inspection.scheduled_date }}</td>
+                    <td>{{ inspection.expected_delivery_date }}</td>
                     <td>{{ inspection.windows_count|default:"-" }}</td>
                     <td>
                         {% if inspection.inspector %}
