--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -44,7 +44,7 @@
                             <th>البائع</th>
                             <td>
                                 {% if order.salesperson %}
-                                    {{ order.salesperson.get_full_name|default:order.salesperson.username }}
+                                    {{ order.salesperson.name }}
                                 {% else %}
                                     -
                                 {% endif %}
